mmorpg 기본 동작 패킷 작업 완료

--- a/FighterServer.vcxproj
+++ b/FighterServer.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="..\Common\PacketBuffer\PacketBuffer.h" />
     <ClInclude Include="..\Common\RingBuffer\RingBuffer.h" />
     <ClInclude Include="Constant.h" />
+    <ClInclude Include="define.h" />
     <ClInclude Include="Macro.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Protocol.h" />
