--- a/FighterServer.vcxproj.filters
+++ b/FighterServer.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="Protocol.h">
       <Filter>Network</Filter>
     </ClInclude>
+    <ClInclude Include="define.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
