--- a/FighterServer.vcxproj.filters
+++ b/FighterServer.vcxproj.filters
@@ -18,9 +18,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="FighterServer.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -33,7 +30,10 @@
     <ClCompile Include="..\Common\RingBuffer\RingBuffer.cpp">
       <Filter>Network</Filter>
     </ClCompile>
-    <ClCompile Include="Socket.cpp">
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="FightServer.cpp">
       <Filter>Network</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,14 +53,14 @@
     <ClInclude Include="..\Common\RingBuffer\RingBuffer.h">
       <Filter>Network</Filter>
     </ClInclude>
-    <ClInclude Include="Socket.h">
-      <Filter>Network</Filter>
-    </ClInclude>
     <ClInclude Include="Protocol.h">
       <Filter>Network</Filter>
     </ClInclude>
     <ClInclude Include="define.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="FightServer.h">
+      <Filter>Network</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
